src/test/resources/private/typechecking/fail/double_decl/fail01_localDoubleVar.jova
class Helper {
}

class Main {

  public int main() {
    int a;
    string a;
    bool a;
    float a;
    char a;
    Helper a;

    return 0;
  }
}